<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_paint_colors" >

        <ImageView
            android:id="@+id/iv_background"
            android:contentDescription="@string/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <com.example.kidsdrawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#80FFFFFF" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/skin"
            android:src="@drawable/pallete_normal"
            android:tag="@color/skin"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/black"
            android:src="@drawable/pallete_normal"
            android:tag="@color/black"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/red"
            android:src="@drawable/pallete_normal"
            android:tag="@color/red"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/green"
            android:src="@drawable/pallete_normal"
            android:tag="@color/green"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/blue"
            android:src="@drawable/pallete_normal"
            android:tag="@color/blue"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/yellow"
            android:src="@drawable/pallete_normal"
            android:tag="@color/yellow"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/lollipop"
            android:src="@drawable/pallete_normal"
            android:tag="@color/lollipop"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/purple"
            android:src="@drawable/pallete_normal"
            android:tag="@color/purple"
            android:onClick="paintClicked" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallete"
            android:background="@color/white"
            android:src="@drawable/pallete_normal"
            android:tag="@color/white"
            android:onClick="paintClicked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/galleryImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp" />

        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_undo"
            android:contentDescription="@string/ib_undo"
            android:scaleType="fitXY"
            android:layout_margin="5dp" />

        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_brush"
            android:contentDescription="@string/brushImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp" />

        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_save"
            android:contentDescription="@string/brushImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>